# dw

./: .gitignore  CONTRIBUTING.md  LICENSE  README-dev.md  README.md  setup.cfg
examples/: ex001_hello_dw.py
src/dw/: __init__.py  __init___spec.py  __main__.py  dsl.py
src/dw/tool/: __init__.py  tr.py
src/tests/: dw_10dsl_spec.py  dw_20tool_10tr_spec.py  dw_dsl_spec.py
test/: test_all_pyenv.sh
