[metadata]
name = python-dw
version = 0.0.1
author = Takahide Nogayama
author_email = nogayama@gmail.com
description = Data Wrangler (dw)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MountainField/dw
project_urls =
    Bug Tracker = https://github.com/MountainField/dw/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# install_requires = 
    # pyyaml


package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]  # in setup.cfg
test =
    uspec
    PyHamcrest
dev =
    uspec
    PyHamcrest
    yapf

#scripts =
#    scripts/dw
[options.entry_points]
console_scripts =
    dw = dw:main_cli

[options.packages.find]
where = src

